Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73464

Broken static build in Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.2, 5.14.0 Alpha
    • 5.12.1
    • Multimedia
    • None
    • Windows
    • a7f01cea43a16a9b2b06ab3a8ff3b62b8edce5cd (qt/qtmultimedia/5.12)

    Description

      1. I compile the source code from "qt-everywhere-src-5.12.1.zip".

      2. I use Windows SDK 8.1.

      3. configure -opensource -confirm-license -platform win32-msvc2017 -debug-and-release -static -static-runtime -mp -no-openssl -make tools -nomake examples -nomake tests -no-icu -no-opengl -no-angle -no-dbus -prefix D:\qt\x86_5.12.1

      This stage is successful.

      4. jom -j 8

      This stage is successful.

      5. jom install

      An error occurs at this stage:

      jom: D:\qt\src-5.12.1\Makefile [module-qtmultimedia-install_subtargets] Error 2

      Version 5.12.0 builds without problems with the same parameters.

       

      When building through "nmake" more detailed output:

      .\qvideowidget.cpp(1013): error C2027: use of undefined type "tagMSG"
       d:\qt\src-5.12.1\qtbase\include\qtgui\../../src/gui/kernel/qwindowdefs_win.h(112): note: see declaration "tagMSG"
       .\qvideowidget.cpp(1013): error C2065: WM_PAINT: undeclared identifier
       .\qvideowidget.cpp(1013): error C2065: WM_ERASEBKGND: undeclared identifier
       NMAKE : fatal error U1077: "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.16.27023\bin\HostX86\x86\cl.EXE" : return code "0x2"

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qtbuildsystem Qt Build System Team
            dchapyshev Dmitry Chapyshev
            Votes:
            3 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes