Fix static build on Windows

Fixes: QTBUG-73464
Change-Id: I5d1052dec14bbe6ee69b348352991d14d63b9c76
Reviewed-by: VaL Doroshchuk <valentyn.doroshchuk@qt.io>